update terrible style

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <h1>Best Revolvo World Dot Com</h1>
 
 <body class="center">
-  <span class="shitty-tagline">For realsies Valve?</span>
+  <div class="shitty-tagline">For realsies Valve?</div>
 
   <div class="vid">
     <video width="100%" src="https://d301dinc95ec5f.cloudfront.net/capture/summit1g-201512094444062.shot.mp4" controls></video>
